More coding practise.

--- a/questions.html
+++ b/questions.html
@@ -26,6 +26,7 @@
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment">Distructuring Assignments</a></li>
     <li><a href="https://medium.freecodecamp.org/why-use-static-types-in-javascript-part-1-8382da1e0adb">static types in JavaScript</a></li>
     <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map">Object and Map differences</a></li>
+    <li>hoisting</li>
     <li></li>
 
 
