--- a/questions.html
+++ b/questions.html
@@ -31,6 +31,14 @@
 
 
   </ol>
+  <p> visualization technologies like D3 and OpenGL/WebGL.</p>
+
+   <p>Expert in web technologies and APIs (HTTP2, CSS/HTML, Browser JS APIs, WebSockets etc.)</p>
+
+  <p> Scripting experience, using build tools such as Jenkins, NPM or YARN
+  Exposure to Continuous Integration and Delivery systems, using pipelines like Spinnaker</p>
+
+<p>  https://stackoverflow.com/questions/10006799/using-javascript-for-rpc-remote-procedure-calls</p>
 </body>
 
 </html>
